eighth commit(full index adaptive...)

--- a/index.html
+++ b/index.html
@@ -372,6 +372,53 @@
             </section>
         </div>
     </main>
+
+    <footer class="footer">
+        <div class="conteiner">
+            <div class="footer-content">
+                <img src="./images/footer/footerlogo.png" alt="logo" class="footer-logo">
+                <nav class="footer-navigation">
+                    <div class="link-block1">
+                        <p>Общие ссылки</p>
+                        <ul class="link-list_footer">
+                            <li class="footer-links">Отзывы о наших курсах</li>
+                            <li class="footer-links">Политика конфиденциальности</li>
+                            <li class="footer-links">Условия использования</li>
+                            <li class="footer-links">Цены и оплата</li>
+                            <li class="footer-links">Комьюнити</li>
+                        </ul>
+                    </div>
+                    <div class="link-block2">
+                        <p>Наши курсы</p>
+                        <ul class="link-list_footer">
+                            <li class="footer-links">HTML/CSS Advanced</li>
+                            <li class="footer-links">Bootstrap 4</li>
+                            <li class="footer-links">VuejS</li>
+                            <li class="footer-links">Javascript</li>
+                        </ul>
+                    </div>
+                </nav>
+                <div class="footer-feedback">
+                    <p>Есть вопросы? Найдем ответы</p>
+                    <div class="feedback-botton">Написать нам</div>
+                    <div class="social-media-links">
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/twitter.svg" alt="">
+                        </a>
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/facebook.svg" alt="">
+                        </a>
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/instagramm.svg" alt="">
+                        </a>
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/vk.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
