--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet" />
     <link rel="shortcut icon" href="./images/Tabicon.png" type="image/x-icon" />
     <title>ItNinja</title>
 </head>
@@ -18,7 +17,9 @@
         <div class="conteiner welcome-background">
             <header class="header">
                 <div class="left-side">
-                    <img src="./images/Logo.png" width="28px" height="auto" alt="logo" class="logo" />
+                    <a href="./index.html">
+                        <img src="./images/Logo.png" width="28px" height="auto" alt="logo" class="logo" />
+                    </a>
                 </div>
                 <div class="right-side">
                     <nav class="header-nav">
