tenth commit(full desktop)

--- a/course_about.html
+++ b/course_about.html
@@ -1,15 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="./images/Tabicon.png" type="image/x-icon">
     <title>Courses about</title>
 </head>
+
 <body>
-    
+    <div class="conteiner">
+        <header class="header">
+            <div class="left-side">
+                <a href="./index.html">
+                    <img src="./images/Logo.png" width="28px" height="auto" alt="logo" class="logo" />
+                </a>
+            </div>
+            <div class="right-side">
+                <nav class="header-nav">
+                    <a href="./courses.html" class="header-links">Курсы</a>
+                    <a href="" class="header-links">Комьюнити</a>
+                </nav>
+                <a href="" class="login-btn">
+                    <img src="./images/Profile.png" alt="Profile" /><span>Войти</span>
+                </a>
+            </div>
+        </header>
+        <main class="courses-about-main">
+            <section class="about-welcome">
+                <img src="./images/aboutcourses/circle.png" alt="" class="courses-abcolute">
+                <nav class="about-links">
+                    <p class="breadcrumbs">
+                        <a href="./index.html" class="breadcrumb-link gray-link">Главная</a> /
+                        <a href="./courses.html" class="breadcrumb-link gray-link">Курсы</a> /
+                        <span class="breadcrumb-link red-link">HTML/CSS Advanced</span>
+                    </p>
+                </nav>
+                <div class="about-welcome-content">
+                    <div class="about-welcome-left">
+                        <div class="about-welcome-header">
+                            <h1>Курс HTML/CSS Advanced</h1>
+                            <div class="new-course">
+                                <img src="./images/нашикурсы/surface1.png" alt="icon" />
+                                <span>Новый</span>
+                            </div>
+                        </div>
+                        <div class="reiting">
+                            <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star" />
+                            <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star" />
+                            <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star" />
+                            <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star" />
+                            <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star" />
+                        </div>
+                        <div class="course-price">
+                            <img src="./images/нашикурсы/coin 1.png" alt="icon" />
+                            <span>150 токенов</span>
+                        </div>
+                        <p class="left-paragraph">
+                            Интерактивный курс верстки веб-сайтов HTML и CSS
+                            <span style="display: block; margin-top: 10px;">
+                                С помощью этого курса HTML и CSS вы узнаете основы верстки веб-<br>сайтов и создадите
+                                учебный сайт KinoMonster
+                            </span>
+                        </p>
+                        <div class="detail-info">
+                            <div class="info-item">
+                                <img src="./images/aboutcourses/video.png" alt="">
+                                <p>34 видео</p>
+                            </div>
+                            <div class="info-item">
+                                <img src="./images/aboutcourses/tasks.png" alt="">
+                                <p>115 заданий</p>
+                            </div>
+                            <div class="info-item">
+                                <img src="./images/aboutcourses/time.png" alt="">
+                                <p>9 часов</p>
+                            </div>
+                        </div>
+                        <div class="feedback-botton margining">Начать обучение</div>
+                    </div>
+                    <div class="about-welcome-right">
+                        <div class="info-box">
+                            <div class="info-icon">
+                                <img src="./images/aboutcourses/!.png" alt="">
+                            </div>
+                            <div class="info-text">
+                                <p>
+                                    Курс HTML/CSS Advanced в активной стадии разработки и новые задания скоро будут
+                                    доступны по мере их выхода, но уже сейчас вы можете начать обучение!
+                                </p>
+                                <p class="highlighted">Новые уроки каждую неделю!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="video-reiting">
+                <iframe class="video-frame red-link" src="https://www.youtube.com/embed/NjahiPD445k?si=HtlvsvX8Wn3c7gnC"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="list-section red-link">
+                    <h5 class="red-link">ТОП 5 ЛИДЕРОВ КУРСА ЗА МЕСЯЦ</h5>
+                    <div class="students">
+                        <div class="student">
+                            <img src="./images/Отзывыстудентов/Ellipse 92.png" alt="img">
+                            <div class="student-name">
+                                <p class="boldy">Сабина Юрченко</p>
+                                <p class="common-item">Самурай</p>
+                            </div>
+                        </div>
+                        <div class="student">
+                            <img src="./images/Отзывыстудентов/Ellipse 92-2.png" alt="img">
+                            <div class="student-name">
+                                <p class="boldy">Бейбарыс Максатулы</p>
+                                <p class="common-item">Ронин</p>
+                            </div>
+                        </div>
+                        <div class="student">
+                            <img src="./images/Отзывыстудентов/Ellipse 92-4.png" alt="img">
+                            <div class="student-name">
+                                <p class="boldy">Аделя Токсанова</p>
+                                <p class="common-item">Ниндзя</p>
+                            </div>
+                        </div>
+                        <div class="student">
+                            <img src="./images/Отзывыстудентов/Ellipse 92-1.png" alt="img">
+                            <div class="student-name">
+                                <p class="boldy">Джейсон Мак'Дакер</p>
+                                <p class="common-item">Самурай</p>
+                            </div>
+                        </div>
+                        <div class="student">
+                            <img src="./images/Отзывыстудентов/Ellipse 92-3.png" alt="img">
+                            <div class="student-name">
+                                <p class="boldy">Александра Краснова</p>
+                                <p class="common-item">Ниндзя</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="courses-info">
+                <div class="information-wrapper">
+                    <div class="tab-menu" id="tabMenu">
+                        <div class="tab active">О курсе</div>
+                        <div class="tab">План курса</div>
+                        <div class="tab">Часто задаваемые вопросы</div>
+                        <div class="tab">Отзывы</div>
+                        <div class="indicator" id="indicator"></div>
+                    </div>
+                    <div class="course-addiction-info">
+                        <h3 class="red-link">О КУРСЕ</h3>
+                        <div class="text-block">
+                            <p>Курс HTML/CSS Advanced поможет вам изучить современную верстку веб-сайтов.</p>
+                            <p>В уроках HTML и CSS вы узнаете:</p>
+                            <ul>
+                                <li>Как верстать блоки на сайте с помощью Grid</li>
+                                <li>Что такое Flexbox и как он упрощает позиционирование блоков</li>
+                                <li>Как создавать адаптивную верстку</li>
+                                <li>Псевдоэлементы ::after и ::before</li>
+                                <li>Редактор Visual Studio Code</li>
+                                <li>Grid System</li>
+                                <li>Встраивание видео</li>
+                                <li>CSS-анимация и анимация SVG</li>
+                            </ul>
+                            <p class="margining">Изучив современную верстку веб-сайтов, вы сможете создавать верстку веб-сайтов любой сложности. Макет сайта KinoMonster будет доступен в популярной программе для дизайна и прототипирования Figma.</p>
+                          </div>
+                    </div>
+                    <div class="speaker-info course-addiction-info">
+                        <h3 class="red-link">ПРЕПОДАВАТЕЛЬ</h3>
+                        <div class="speaker-skills">
+                            <img src="./images/Отзывыстудентов/Rectangle 1209.png" alt="img">
+                            <div class="speaker-detailed-info">
+                                <p class="boldy remming">Сергей Никонов</p>
+                                <ul>
+                                    <li>Основатель проекта</li>
+                                    <li>Опыт в веб-разработке более 10 лет</li>
+                                    <li>Работал над высоконагруженными веб-проектами в крупных компаниях <br> США и ЕВРОПЫ</li>
+                                    <li>Провел несколько десятков оффлайн и онлайн семинаров на тему <br> веб-разработки</li>
+                                    <li>Figma.</li>
+                                  </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+    <footer class="footer">
+        <div class="conteiner">
+            <div class="footer-content">
+                <img src="./images/footer/footerlogo.png" alt="logo" class="footer-logo">
+                <nav class="footer-navigation">
+                    <div class="link-block1">
+                        <p>Общие ссылки</p>
+                        <ul class="link-list_footer">
+                            <li class="footer-links">Отзывы о наших курсах</li>
+                            <li class="footer-links">Политика конфиденциальности</li>
+                            <li class="footer-links">Условия использования</li>
+                            <li class="footer-links">Цены и оплата</li>
+                            <li class="footer-links">Комьюнити</li>
+                        </ul>
+                    </div>
+                    <div class="link-block2">
+                        <p>Наши курсы</p>
+                        <ul class="link-list_footer">
+                            <li class="footer-links">HTML/CSS Advanced</li>
+                            <li class="footer-links">Bootstrap 4</li>
+                            <li class="footer-links">VuejS</li>
+                            <li class="footer-links">Javascript</li>
+                        </ul>
+                    </div>
+                </nav>
+                <div class="footer-feedback">
+                    <p>Есть вопросы? Найдем ответы</p>
+                    <div class="feedback-botton">Написать нам</div>
+                    <div class="social-media-links">
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/twitter.svg" alt="">
+                        </a>
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/facebook.svg" alt="">
+                        </a>
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/instagramm.svg" alt="">
+                        </a>
+                        <a href="" class="social-media-links">
+                            <img src="./images/footer/vk.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script>
+        const tabs = document.querySelectorAll(".tab");
+        const indicator = document.getElementById("indicator");
+
+        function updateIndicator(el) {
+            indicator.style.width = `${el.offsetWidth}px`;
+            indicator.style.left = `${el.offsetLeft}px`;
+        }
+
+        tabs.forEach(tab => {
+            tab.addEventListener("click", () => {
+                tabs.forEach(t => t.classList.remove("active"));
+                tab.classList.add("active");
+                updateIndicator(tab);
+            });
+        });
+
+        // Инициализация по умолчанию
+        window.addEventListener("DOMContentLoaded", () => {
+            const activeTab = document.querySelector(".tab.active");
+            updateIndicator(activeTab);
+        });
+    </script>
 </body>
+
 </html>
