--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="./images/pic.png" width="420px" height="auto" alt="pic.png" />
+                    <img class="welcome-main-pic" src="./images/person&sun.png" alt="pic.png" />
                 </div>
             </section>
         </div>
@@ -65,7 +65,7 @@
                     <div class="temple-element starter">
                         <div class="temple-el_right">
                             <h1>01</h1>
-                            <img src="./images/marker.png" height="40px" width="auto" alt="marker" />
+                            <img src="./images/marker.png" class="marker-photo" alt="marker" />
                         </div>
                         <div class="temple-el_left">
                             <h1>Интерактивное обучение</h1>
@@ -78,7 +78,7 @@
                     <div class="temple-element end">
                         <div class="temple-el_right">
                             <h1>02</h1>
-                            <img src="./images/marker.png" height="40px" width="auto" alt="marker" />
+                            <img src="./images/marker.png" class="marker-photo" alt="marker" />
                         </div>
                         <div class="temple-el_left">
                             <h1>Доступная Цена</h1>
@@ -92,7 +92,7 @@
                     <div class="temple-element starter">
                         <div class="temple-el_right">
                             <h1>03</h1>
-                            <img src="./images/marker.png" height="40px" width="auto" alt="marker" />
+                            <img src="./images/marker.png" class="marker-photo" alt="marker" />
                         </div>
                         <div class="temple-el_left">
                             <h1>Уникальные курсы</h1>
@@ -146,7 +146,7 @@
                                     </div>
                                 </div>
                                 <a class="continue-to" href="./course_about.html">
-                                    <span>Подробнее</span>
+                                    <span class="opacityspan" >Подробнее</span>
                                     <img src="./images/нашикурсы/Arrow - Right.png" alt="icon" />
                                 </a>
                             </div>
@@ -325,7 +325,7 @@
         </div>
         <div class="conteiner">
             <section class="feedback-from-students">
-                <h1>Отзывы наших выпускников</h1>
+                <h1 class="feedback-header" >Отзывы наших выпускников</h1>
                 <div class="feedback-cards">
                     <div class="feedback-card">
                         <div class="feedback-top_content">
