main mobile(beta)

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
                         программированию.Научим создавать профессиональные<br />
                         сайты с нуля. Начни обучение сейчас!
                     </p>
-                    <div class="next-btn">
-                        <span>Перейти к курсам</span>
-                        <a href="./courses.html" class="circle-button">
-                            <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn" />
-                        </a>
-                    </div>
                 </div>
-                <div>
+                <div class="welcome-pictures">
                     <img class="welcome-main-pic" src="./images/person&sun.png" alt="pic.png" />
+                </div>
+                <div class="next-btn">
+                    <span>Перейти к курсам</span>
+                    <a href="./courses.html" class="circle-button">
+                        <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn" />
+                    </a>
                 </div>
             </section>
         </div>
@@ -59,7 +59,9 @@
     <main class="main">
         <div class="conteiner">
             <section class="temple">
-                <img src="./images/temple.png" alt="temple" class="temple-photo" />
+                <div class="temple-photo-wrapper">
+                    <img src="./images/temple.png" alt="temple" class="temple-photo" />
+                </div>
                 <div class="temple-content">
                     <img src="./images/uzumaki.png" alt="uzumaki" class="uzumaki" />
                     <div class="temple-element starter">
@@ -102,12 +104,12 @@
                             </p>
                         </div>
                     </div>
-                    <div class="next-btn end">
-                        <span>Перейти к курсам</span>
-                        <a href="./courses.html" class="circle-button">
-                            <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn" />
-                        </a>
-                    </div>
+                </div>
+                <div class="next-btn end twice-column">
+                    <span>Перейти к курсам</span>
+                    <a href="./courses.html" class="circle-button">
+                        <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn" />
+                    </a>
                 </div>
             </section>
         </div>
@@ -330,7 +332,10 @@
                     <div class="feedback-card">
                         <div class="feedback-top_content">
                             <img src="./images/Отзывыстудентов/“.png" alt="icon" class="apostroph">
-                            <p >Звание: <span>Самурай</span></p>
+                            <div class="status">
+                                <p class="opacityspan">Звание: </p>
+                                <span class="red-link">Самурай</span>
+                            </div>
                             <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
                         </div>
                         <div class="feedback-author">
@@ -344,7 +349,10 @@
                     <div class="feedback-card darksamurai">
                         <div class="feedback-top_content">
                             <img src="./images/Отзывыстудентов/“.png" alt="icon" class="apostroph">
-                            <p>Звание: <span>Самурай</span></p>
+                            <div class="status">
+                                <p class="opacityspan">Звание: </p>
+                                <span class="red-link">Самурай</span>
+                            </div>
                             <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
                         </div>
                         <div class="feedback-author">
@@ -358,7 +366,10 @@
                     <div class="feedback-card ninja">
                         <div class="feedback-top_content">
                             <img src="./images/Отзывыстудентов/“.png" alt="icon" class="apostroph">
-                            <p>Звание: <span>Самурай</span></p>
+                            <div class="status">
+                                <p class="opacityspan">Звание: </p>
+                                <span class="red-link">Самурай</span>
+                            </div>
                             <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
                         </div>
                         <div class="feedback-author">
